2010-03-09  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/doc/yarp_config_files.dox: start a tutorial on yarp
	config files.

	* src/libYARP_OS/src/Companion.cpp: make it easier to test
	config file parsing with the "yarp resource" command.

2010-02-23 Arjan Gijsberts <arjan@liralab.it>
	* src/libYARP_math/include/yarp/math/Math.h
	* src/libYARP_math/src/math.cpp
	* src/libYARP_math/harness/MathTest.cpp
	Added yarp::math::det to calculate the determinant of a 
	matrix and the related regression test.

2010-02-10 Lorenzo Natale <lorenzo.natale@iit.it>
	* conf/YarpLibraryNames.cmake:
	fixed YARP_INCLUDES, removed $YARP_DIR/include
	added $YARP_DIR/generated_include
	
2010-02-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCoreOutputUnit.cpp: fix regression
	in multicast behavior.

2010-02-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/CMakeLists.txt: avoid obscure conflict between
	generated header files and installed header files, when
	install directory is identical to YARP_DIR.

2010-02-01  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: responses to "yarp name"
	should not go through logger (which may truncate them).
	Thanks Ugo for reporting this.

2010-01-27  Ugo Pattacini  <ugo.pattacini@iit.it>

	* src/libYARP_dev/src/RemoteControlBoard.cpp:
    timeout handling bug fix

2010-01-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: added "yarp quiet" option,
	e.g. "yarp quiet read /read".  This is the opposite of the
	existing "yarp verbose" option.  The effect is the same as
	setting the YARP_QUIET environment variable.

	* src/libYARP_OS/src/Network.cpp: added "YARP_QUIET" environment
	variable.  If set to 1, no messages should be emitted by YARP.
	Note to developers - please use YARP_ERROR/YARP_DEBUG/YARP_INFO
	macros for all messages so that users can control their
	appearance.

2010-01-27 Alessandro Scalzo <alessandro.scalzo@iit.it>